--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@liskhq/lisk-client": "^5.2.2",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
@@ -10,7 +11,7 @@
         "@web3-react/injected-connector": "^6.0.7",
         "bootstrap": "^4.6.0",
         "gh-pages": "^3.2.3",
-        "moment": "^2.29.1",
+        "moment": "^2.29.4",
         "react": "^18.0.0",
         "react-bootstrap": "^1.5.2",
         "react-cookie": "^4.0.3",
@@ -26,7 +27,7 @@
         "three": "^0.139.0",
         "three-fbx-loader": "^1.0.3",
         "web-vitals": "^1.1.1",
-        "web3": "^1.7.1"
+        "web3": "^1.8.0"
     },
     "scripts": {
         "start": "react-scripts start",
