--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^12.8.3",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
+        "BigInt": "^5.5.3",
         "bootstrap": "^4.6.0",
         "gh-pages": "^3.2.3",
         "moment": "^2.29.4",
@@ -39,7 +40,10 @@
         "extends": [
             "react-app",
             "react-app/jest"
-        ]
+        ],
+        "globals": {
+            "BigInt": true
+          }
     },
     "browserslist": {
         "production": [
