--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@liskhq/lisk-client": "^5.2.2",
+        "@material-ui/core": "^4.12.4",
+        "@mui/icons-material": "^5.10.16",
+        "@mui/material": "^5.10.16",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
